<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="365dp"
        android:layout_height="69dp"
        android:hint="@string/username"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/loginbtn" />

</LinearLayout>
